feat: Startup Version 0.1

--- a/startup/index2.html
+++ b/startup/index2.html
@@ -39,7 +39,7 @@
                 transform: scale(1);
             }
             to {
-                color: rgba(224, 5, 5, 0.075);
+                color: #783d02b1;
                 transform: scale(1.1);
             }
         }
@@ -67,7 +67,8 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <div class="logo"> <span class="icon fa-gem"></span> </div>
+        <div class="logo"> <img class="icon" src="../startup/ruspina logo.png" alt="feather">
+        </div>
         <div class="content">
           <div class="inner">
             <h1>STARTUP24</h1>
@@ -145,7 +146,7 @@
 
     <article id="work">
         <h2 class="major">REGISTER</h2>
-        <h3><b><center>Choose your Clan Unleash the power within you</center></b></h3>
+        <h3><b><center>Choose your Clan and Unleash the power within you</center></b></h3>
       
         <!-- Image 1 -->
         <div class="image-container" style="text-align: center; width: 200px; margin: 20px;">
@@ -519,9 +520,9 @@ name="demo-message" id="demo-message" placeholder="Enter your message" rows="6">
         </article>
       </div>
       <!-- Footer -->
-      <footer id="footer">
+      <!-- <footer id="footer">
         <p class="copyright">external link <a href=""><h4>click me </h4></a>.</p>
-      </footer>
+      </footer> -->
     </div>
     <!-- BG -->
     <div id="bg"></div>
